Fixed item description wrapping and editor wrapping.

--- a/main.css
+++ b/main.css
@@ -448,11 +448,6 @@ button,
   grid-template-areas: "item-bottom-tabs" "item-bottom-content";
   height: fit-content;
   overflow-y: hidden;
-  /*
-        &>div {
-            margin: 5px;
-        }
-*/
 }
 .item-sheet .item-bottom-pane .item-bottom-tabs-section {
   grid-area: item-bottom-tabs;
@@ -464,15 +459,28 @@ button,
   border-style: solid;
   border-width: 5px;
   overflow-y: scroll;
+  flex-wrap: wrap;
+}
+.item-description-grid,
+.item-settings-grid {
+  display: flex;
+  width: inherit;
+  height: inherit;
+  flex: 1 1 auto;
 }
 .item-description-tab {
-  display: flex;
+  display: grid;
+  grid-template-columns: 135px auto;
+  grid-template-rows: auto;
+  grid-template-areas: "item-summary-pane item-description-pane";
   flex: 1 0 auto;
   min-height: 75px;
   grid-gap: 5px;
   background-color: #b90202ff;
+  width: inherit;
 }
 .item-description-tab .item-summary-section {
+  grid-area: item-summary-pane;
   background-color: #eaeaeaff;
   height: unset;
   font-size: 0.8rem;
@@ -485,9 +493,11 @@ button,
   flex: 0 0 70px;
 }
 .item-description-tab .item-description-section {
+  grid-area: item-description-pane;
   display: flex;
   flex: 1 0 auto;
   background-color: #eaeaeaff;
+  flex-wrap: wrap;
   height: unset;
 }
 .item-settings-tab {
@@ -1007,66 +1017,66 @@ form input.number {
 }
 @keyframes glitch-anim {
   0% {
-    clip: rect(145px, 9999px, 7px, 0);
+    clip: rect(138px, 9999px, 142px, 0);
   }
   10% {
-    clip: rect(81px, 9999px, 70px, 0);
+    clip: rect(72px, 9999px, 143px, 0);
   }
   20% {
-    clip: rect(41px, 9999px, 58px, 0);
+    clip: rect(42px, 9999px, 128px, 0);
   }
   30% {
-    clip: rect(83px, 9999px, 28px, 0);
+    clip: rect(103px, 9999px, 68px, 0);
   }
   40% {
-    clip: rect(54px, 9999px, 93px, 0);
+    clip: rect(130px, 9999px, 6px, 0);
   }
   50% {
-    clip: rect(94px, 9999px, 148px, 0);
+    clip: rect(8px, 9999px, 79px, 0);
   }
   60% {
-    clip: rect(81px, 9999px, 100px, 0);
+    clip: rect(77px, 9999px, 100px, 0);
   }
   70% {
-    clip: rect(49px, 9999px, 147px, 0);
+    clip: rect(134px, 9999px, 46px, 0);
   }
   80% {
-    clip: rect(22px, 9999px, 142px, 0);
+    clip: rect(38px, 9999px, 88px, 0);
   }
   90% {
-    clip: rect(131px, 9999px, 95px, 0);
+    clip: rect(51px, 9999px, 40px, 0);
   }
   100% {
-    clip: rect(105px, 9999px, 8px, 0);
+    clip: rect(50px, 9999px, 56px, 0);
   }
 }
 @keyframes glitch-anim-2 {
   20% {
-    clip: rect(15px, 9999px, 23px, 0);
+    clip: rect(14px, 9999px, 28px, 0);
   }
   30% {
-    clip: rect(58px, 9999px, 56px, 0);
+    clip: rect(65px, 9999px, 43px, 0);
   }
   40% {
-    clip: rect(38px, 9999px, 138px, 0);
+    clip: rect(60px, 9999px, 100px, 0);
   }
   50% {
-    clip: rect(7px, 9999px, 74px, 0);
+    clip: rect(20px, 9999px, 89px, 0);
   }
   60% {
-    clip: rect(53px, 9999px, 83px, 0);
+    clip: rect(107px, 9999px, 145px, 0);
   }
   70% {
-    clip: rect(2px, 9999px, 93px, 0);
+    clip: rect(44px, 9999px, 62px, 0);
   }
   80% {
-    clip: rect(100px, 9999px, 101px, 0);
+    clip: rect(59px, 9999px, 26px, 0);
   }
   90% {
-    clip: rect(7px, 9999px, 63px, 0);
+    clip: rect(53px, 9999px, 98px, 0);
   }
   100% {
-    clip: rect(38px, 9999px, 17px, 0);
+    clip: rect(80px, 9999px, 136px, 0);
   }
 }
 .window-app .window-content {
